[package]
name = "dfut"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
rmp-serde = "1.3.0"
rand = "0.8.5"
tracing = "0.1.40"
metrics = "0.22.3"
lru = "0.12.3"

tonic = "0.11.0"
prost = "0.12.4"
tower-service = "0.3.2"
http = "0.2.11"

dfut-macro = { path = "../dfut-macro" }

[build-dependencies]
tonic-build = "0.11"
