[package]
name = "dfut"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
tracing = "0.1.40"
metrics = "0.22.3"
lru = "0.12.3"
erased-serde = "0.4.5"
size-ser = "0.1.0"

tonic = "0.11.0"
prost = "0.12.4"
tower-service = "0.3.2"
http = "0.2.11"

raft = "0.7.0"
slog = "2.7.0"
slog-stdlog = "4.1.1"
protobuf = "2.28.0"

dfut-macro = { path = "../dfut-macro" }

[build-dependencies]
tonic-build = "0.11"
